Backend API code structure

--- a/handpicked_startup/src/pages/dashboard/index.astro
+++ b/handpicked_startup/src/pages/dashboard/index.astro
@@ -1,5 +1,7 @@
 ---
 import DashboardLayout from '../../layouts/DashboardLayout.astro';
+import { requireAuth } from '../../components/utils/checkAuth.js';
+requireAuth();
 ---
 
 <html lang="en">
