latest code changes

--- a/handpicked_startup/src/pages/dashboard/index.astro
+++ b/handpicked_startup/src/pages/dashboard/index.astro
@@ -5,7 +5,7 @@ requireAuth();
 ---
 
 <html lang="en">
-  <DashboardLayout>
+  <DashboardLayout client:load>
   <head>
     <title>Admin Dashboard | Handpicked Startup</title>
     <meta name="robots" content="noindex" />
