--- a/handpicked_startup/src/pages/index.astro
+++ b/handpicked_startup/src/pages/index.astro
@@ -3,11 +3,11 @@
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; URL=/login" />
     <script type="text/javascript">
-      const auth = localStorage.getItem('auth');
-      if (auth) {
-        window.location.href = '/dashboard';
+      const authToken = localStorage.getItem("authToken");
+      if (authToken) {
+        window.location.href = "/dashboard";
       } else {
-        window.location.href = '/login';
+        window.location.href = "/login";
       }
     </script>
   </head>
