--- a/handpicked_startup/src/styles/global.css
+++ b/handpicked_startup/src/styles/global.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import 'tippy.js/dist/tippy.css';
+
 .menu {
   list-style: none;
   padding: 0;
